--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <div class="hero-image">
                     <div class="hero-avatar">
                         <div class="avatar-circle">
-                            <i class="fas fa-user"></i>
+                            <img src="IMG_0499.jpeg" alt="Aaron Davidge">
                         </div>
                     </div>
                 </div>
